--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,3 +1,17 @@
 body {
     margin: 0;
+
+    div {
+        position: absolute;
+        transform-origin: 0 0;
+        display: none;
+
+        &#gear-large img {
+            transform: translate3d(-174px, -176px, 0);
+        }
+
+        &#gear-small img {
+            transform: translate3d(-100px, -100px, 0);
+        }
+    }
 }
