--- a/webroot/styles/styles.css
+++ b/webroot/styles/styles.css
@@ -1,2 +1,16 @@
 body {
   margin: 0; }
+  body div {
+    position: absolute;
+    -webkit-transform-origin: 0 0;
+    -ms-transform-origin: 0 0;
+    transform-origin: 0 0;
+    display: none; }
+    body div#gear-large img {
+      -webkit-transform: translate3d(-174px, -176px, 0);
+      -ms-transform: translate3d(-174px, -176px, 0);
+      transform: translate3d(-174px, -176px, 0); }
+    body div#gear-small img {
+      -webkit-transform: translate3d(-100px, -100px, 0);
+      -ms-transform: translate3d(-100px, -100px, 0);
+      transform: translate3d(-100px, -100px, 0); }
